# journaler

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml  release.yml
src/: db.rs  lib.rs  macros.rs  main.rs
tests/: integration.rs
