[package]
name = "journaler"
version = "0.1.1"
edition = "2024"

[dependencies]
rusqlite = "0.31"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
dialoguer = "0.11"
strsim = "0.11"
csv = "1.3"
argon2 = "0.5"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
